--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,1 +1,55 @@
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+
+}
+.head {
+    background: white;
+    width: 100%;
+    padding-top: 20px;
+    padding-left: 10px;
+    height: 90px;
+    border-bottom: 1px solid gainsboro;
+
+   
+
+}
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 100px;
+}
+.log-section {
+    width: 90%;
+}
+.link-section {
+    width: 10%;
+    padding-top: 10px;
+    &__link {
+        color: black;
+        text-decoration: none;
+        font-size: 20px;
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+    &__link:hover {
+        text-decoration-line: underline;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
