--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,10 +23,12 @@
 }
 .log-section {
     width: 90%;
+    padding-left: 15px;
 }
 .link-section {
     width: 10%;
     padding-top: 10px;
+    padding-right: 10px;
     &__link {
         color: black;
         text-decoration: none;
@@ -38,7 +40,70 @@
         text-decoration-line: underline;
     }
 }
+// main 
+.main {
+    background: white;
+    height: 700px;
+}
+.main-section {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+}
+.main-text {
+    display: block;
+    text-align: center;
+    font-family: sans-serif;
+    &__para {
+        font-size: 13px;
+        color: #333;
+        padding-bottom: 20px;
+    }
+    &__title {
+        font-size: 32px; 
+        font-weight: 600;
+        line-height: 1.2;
+        padding-bottom: 20px;
 
+    }
+    &__text {
+        font-size: 18px;
+        line-height: 1.5;
+
+    }
+}
+// button 
+.button {
+    padding-top: 20px;
+    &__btn {
+        background:#e50914;
+        width: 350px;
+        height: 70px;
+        border: #e50914;
+        border-radius: 6px;
+    }
+    &__link  {
+        text-decoration: none;
+        color: white;
+        font-family: sans-serif;
+        font-size: 25px;
+    }
+}
+// footer 
+.footer {
+    background: #f3f3f3;
+    height:160px;
+
+}
+.footer-main {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding-top: 50px;
+    width: 80%;
+    margin: 0% auto;
+    grid-gap: 5px;
+}
 
 
 
