--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,10 @@
         border: #e50914;
         border-radius: 6px;
     }
+    &__btn:hover {
+        background: red
+
+    }
     &__link  {
         text-decoration: none;
         color: white;
@@ -102,6 +106,18 @@
     width: 80%;
     margin: 0% auto;
     grid-gap: 5px;
+    font-family: sans-serif;
+    &__link {
+    font-family: sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    color: #737373;
+    line-height: 2;
+    }
+    &__link:hover{
+        text-decoration-line: underline;
+
+    }
 }
 
 
