--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,11 +39,15 @@
     &__link:hover {
         text-decoration-line: underline;
     }
+    @media screen and (max-width:1024px) {
+        display:none;
+        
+    }
 }
 // main 
 .main {
     background: white;
-    height: 700px;
+    height: 600px;
 }
 .main-section {
     display: grid;
@@ -84,7 +88,7 @@
         border-radius: 6px;
     }
     &__btn:hover {
-        background: red
+        background: red;
 
     }
     &__link  {
