import all file

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,167 +1,5 @@
-*{
-    padding: 0%;
-    margin: 0%;
-    box-sizing: border-box;
-
-}
-
-.head {
-    background: white;
-    width: 100%;
-    padding-top: 20px;
-    padding-left: 10px;
-    height: 90px;
-    border-bottom: 1px solid gainsboro;
-    @media screen and (max-width:290px) {
-        border-bottom: none;
-       }
-
-}
-.content {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 100px;
-}
-.log-section {
-    width: 90%;
-    padding-left: 15px;
-}
-.link-section {
-    width: 10%;
-    padding-top: 10px;
-    padding-right: 10px;
-    &__link {
-        color: black;
-        text-decoration: none;
-        font-size: 20px;
-        font-family: sans-serif;
-        font-weight: bold;
-    }
-    &__link:hover {
-        text-decoration-line: underline;
-    }
-    @media screen and (max-width:1024px) {
-        display:none; 
-    }
-}
-// main 
-.main {
-    background: white;
-    height: 600px;
-    @media screen  and (max-width:915px){
-        height: 500px;
-        
-    }
-   
-}
-.main-section {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    padding-top: 100px;
-    @media screen  and (max-width:915px){
-        padding-top: 10px;
-        
-    }
-}
-.main-text {
-    display: block;
-    text-align: center;
-    font-family: sans-serif;
-    &__para {
-        font-size: 13px;
-        color: #333;
-        padding-bottom: 20px;
-    }
-    &__title {
-        font-size: 32px; 
-        font-weight: 600;
-        line-height: 1.2;
-        padding-bottom: 20px;
-        @media screen  and (max-width:290px){
-            font-size: 15px;
-            
-        }
-        
-
-    }
-    &__text {
-        font-size: 18px;
-        line-height: 1.5;
-
-    }
-    @media screen and (max-width:290px) {
-        padding-left: 40px;       
-       }
-}
-// button 
-.button {
-    padding-top: 20px;
-    &__btn {
-        background:#e50914;
-        width: 350px;
-        height: 70px;
-        border: #e50914;
-        border-radius: 6px;
-        @media screen and (max-width:290px) {
-            width: 250px;
-            
-        }
-    }
-    &__btn:hover {
-        background: red;
-
-    }
-    &__link  {
-        text-decoration: none;
-        color: white;
-        font-family: sans-serif;
-        font-size: 25px;
-    }
-}
-// footer 
-.footer {
-    background: #f3f3f3;
-    height:160px;
-    @media screen and (max-width:290px) {
-        display: none        
-       }
-}
-.footer-main {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding-top: 50px;
-    width: 80%;
-    margin: 0% auto;
-    grid-gap: 5px;
-    font-family: sans-serif;
-    @media screen and (max-width:290px) {
-     display: none        
-    }
-    &__link {
-    font-family: sans-serif;
-    font-size: 14px;
-    text-decoration: none;
-    color: #737373;
-    line-height: 2;
-    }
-    &__link:hover{
-        text-decoration-line: underline;
-
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@import "../scss/rest/base";
+@import "../scss/componet/button";
+@import "../scss/layout/head";
+@import"../scss/layout/main";
+@import"../scss/layout/footer";
